# wolfram-sim-ehammond

./: .gitignore  README.md
docs/: cursorRules.md  simFlow.md  wolfram-sim-prd.md
memory-bank/: 00-index.md  01-productVision.md  02-techContext.md  03-systemPatterns.md  04-database.md  05-uidesign.md  06-developmentPlan.md  07-kanban.md  08-changelog.md  09-environment.md  10-ai-interaction-guidelines.md  11-code-snippets.md  12-decisions.md  13-quick-reference.md
proto/: wolfram_physics.proto
wolfram-sim-frontend/: index.html  package-lock.json  package.json  vite.config.ts
wolfram-sim-frontend/src/: App.css  App.tsx
wolfram-sim-frontend/src/components/: HypergraphVisualizer.tsx  SimulationControls.tsx  StateDisplay.tsx
wolfram-sim-frontend/src/services/: apiClient.ts  grpcPolyfill.js
wolfram-sim-frontend/src/store/: simulationStore.ts
wolfram-sim-rust/: Cargo.toml  build.rs
wolfram-sim-rust/examples/: sprint3_demo.rs
wolfram-sim-rust/src/: lib.rs  main.rs
wolfram-sim-rust/src/evolution/: mod.rs  rewriter.rs
wolfram-sim-rust/src/hypergraph/: atom.rs  hypergraph.rs  mod.rs  relation.rs
wolfram-sim-rust/src/matching/: isomorphism.rs  mod.rs
wolfram-sim-rust/src/rules/: mod.rs  pattern.rs  rule.rs
wolfram-sim-rust/src/serialization/: examples.rs  mod.rs  persistence.rs
wolfram-sim-rust/src/simulation/: event.rs  manager.rs  mod.rs
