[package]
name = "wolfram-sim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
tonic-web = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For JSON serialization
chrono = { version = "0.4", features = ["serde"] } # For timestamps in file naming
thiserror = "1.0" # For structured error handling

[dev-dependencies]
tempfile = "3.0" # For temporary directories in tests

[build-dependencies]
tonic-build = "0.11"
